force-app/main/default/objects/Opportunity/fields/Business_Analyst__c.field-meta.xml
<CustomField>
    <fullName>Business_Analyst__c</fullName>
    <formula>Village__r.Default_Business_Analyst__r.FirstName &amp; &quot; &quot; &amp; Village__r.Default_Business_Analyst__r.LastName</formula>
    <label>Business Analyst</label>
    <type>Text</type>
</CustomField>