force-app/main/default/objects/Opportunity/fields/CBF__c.field-meta.xml
<CustomField>
    <fullName>CBF__c</fullName>
    <formula>Village__r.CBF__c</formula>
    <inlineHelpText>Charge basis factor</inlineHelpText>
    <label>CBF</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>