force-app/main/default/objects/Opportunity/fields/China_Brand_Captain_New__c.field-meta.xml
<CustomField>
    <fullName>China_Brand_Captain_New__c</fullName>
    <description>This is the China Brand Captain on the Brand Account</description>
    <formula>Account.China_Brand_Captain__r.FirstName +&apos; &apos;+ Account.China_Brand_Captain__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>This is the China Brand Captain on the Brand Account</inlineHelpText>
    <label>China Brand Captain</label>
    <type>Text</type>
</CustomField>