force-app/main/default/objects/Opportunity/fields/Comments__c.field-meta.xml
<CustomField>
    <fullName>Comments__c</fullName>
    <inlineHelpText>Enter any comments you wish called out on the Brand Negotiation and others reports</inlineHelpText>
    <label>Comments</label>
    <length>1024</length>
    <type>LongTextArea</type>
</CustomField>