force-app/main/default/objects/Opportunity/fields/Commitment_Letter__c.field-meta.xml
<CustomField>
    <fullName>Commitment_Letter__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Commitment Letter</label>
    <lookupFilter>
        <active>false</active>
        <filterItems>
            <field>Commitment_Letter__c.Brand__c</field>
            <operation>equals</operation>
            <valueField>$Source.AccountId</valueField>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Commitment_Letter__c</referenceTo>
    <relationshipLabel>Deals</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>