force-app/main/default/objects/Opportunity/fields/Contract_Expiry_Date__c.field-meta.xml
<CustomField>
    <fullName>Contract_Expiry_Date__c</fullName>
    <description>The date the contract is due to expire</description>
    <inlineHelpText>The date the contract is due to expire, and therefore the expected exit date</inlineHelpText>
    <label>Contract Expiry Date</label>
    <type>Date</type>
</CustomField>