force-app/main/default/objects/Opportunity/fields/Contract_Tenant_Break_Date__c.field-meta.xml
<CustomField>
    <fullName>Contract_Tenant_Break_Date__c</fullName>
    <description>The first date in which the Tenant can break the contract.</description>
    <inlineHelpText>The first date in which the Tenant can break the contract.</inlineHelpText>
    <label>Tenant Break Date</label>
    <type>Date</type>
</CustomField>