force-app/main/default/objects/Opportunity/fields/Contribution__c.field-meta.xml
<CustomField>
    <fullName>Contribution__c</fullName>
    <description>Describe the TI Contribution</description>
    <inlineHelpText>Describe the TI Contribution</inlineHelpText>
    <label>Contribution</label>
    <type>TextArea</type>
</CustomField>