force-app/main/default/objects/Opportunity/fields/CreateGift__c.field-meta.xml
<CustomField>
    <fullName>CreateGift__c</fullName>
    <defaultValue>true</defaultValue>
    <label>CreateGift</label>
    <type>Checkbox</type>
</CustomField>