force-app/main/default/objects/Opportunity/fields/Current_Brand_in_Unit_2__c.field-meta.xml
<CustomField>
    <fullName>Current_Brand_in_Unit_2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>If the</description>
    <inlineHelpText>If the Brand will move into 2 units, enter the secondary unit here.</inlineHelpText>
    <label>Current Brand in Unit 2</label>
    <referenceTo>Village_Presence__c</referenceTo>
    <relationshipLabel>Opportunities (Current Brand in Unit 2)</relationshipLabel>
    <relationshipName>Brands_in_Contention2</relationshipName>
    <type>Lookup</type>
</CustomField>