force-app/main/default/objects/Opportunity/fields/Current_Brand_in_Unit__c.field-meta.xml
<CustomField>
    <fullName>Current_Brand_in_Unit__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Current Brand in Unit</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>The Village Presence Record must be in the same village</errorMessage>
        <filterItems>
            <field>$Source.Village__c</field>
            <operation>equals</operation>
            <valueField>Village_Presence__c.Village__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Village_Presence__c</referenceTo>
    <relationshipLabel>Brands in Contention</relationshipLabel>
    <relationshipName>Opportunities1</relationshipName>
    <type>Lookup</type>
</CustomField>