force-app/main/default/objects/Opportunity/fields/Current_Unit_Move_Out_Date__c.field-meta.xml
<CustomField>
    <fullName>Current_Unit_Move_Out_Date__c</fullName>
    <inlineHelpText>The date that the incoming brand ceases to trade in its former unit</inlineHelpText>
    <label>Brand Current Unit Close Date</label>
    <type>Date</type>
</CustomField>