force-app/main/default/objects/Opportunity/fields/Date_to_Serve_Notice__c.field-meta.xml
<CustomField>
    <fullName>Date_to_Serve_Notice__c</fullName>
    <description>The date in which notice has to be served in order to terminate the contract in line with the expected Exit date.</description>
    <inlineHelpText>The date in which notice has to be served in order to terminate the contract in line with the expected Exit date.</inlineHelpText>
    <label>Date to Serve Notice</label>
    <type>Date</type>
</CustomField>