force-app/main/default/objects/Opportunity/fields/Days_at_the_Current_Stage__c.field-meta.xml
<CustomField>
    <fullName>Days_at_the_Current_Stage__c</fullName>
    <formula>TODAY() - Last_StageChange_Date__c</formula>
    <label>Days at the Current Stage</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>