force-app/main/default/objects/Opportunity/fields/Deliverability__c.field-meta.xml
<CustomField>
    <fullName>Deliverability__c</fullName>
    <inlineHelpText>High: It is possible for a deal to be agreed within 3 months.
Medium: It is possible for a deal to be agreed within 6-12 months.
Low: It is possible for a deal to be agreed in more than 12 months.</inlineHelpText>
    <label>Deliverability</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>High</fullName>
            </value>
            <value>
                <fullName>Medium</fullName>
            </value>
            <value>
                <fullName>Low</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>