force-app/main/default/objects/Opportunity/fields/Department2__c.field-meta.xml
<CustomField>
    <fullName>Department2__c</fullName>
    <formula>TEXT(Account.Department__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The department pulled from the Account/Brand record</inlineHelpText>
    <label>Department2</label>
    <type>Text</type>
</CustomField>