force-app/main/default/objects/Opportunity/fields/Effective_Size__c.field-meta.xml
<CustomField>
    <fullName>Effective_Size__c</fullName>
    <description>This is the value that feeds into the calculations, it will be the GEA of the Unit if know or the Budget Unit otherwise it will be the value entered for ideal size. This value is always in sq.m</description>
    <formula>IF( Unit__r.Size_GEA__c &gt; 0, Unit__r.Size_GEA__c, Ideal_Size__c  / SF__c  )</formula>
    <inlineHelpText>This is, effectively, the GEA of the unit or the budget unit (if the unit is unknown). Otherwise, it will be the ideal size. This value is always measured in sq.m.</inlineHelpText>
    <label>Effective Size</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>