force-app/main/default/objects/Opportunity/fields/Effective_Size_for_Charges__c.field-meta.xml
<CustomField>
    <fullName>Effective_Size_for_Charges__c</fullName>
    <formula>CASE(Village__r.Village_Code__c, &quot;BV&quot;, Effective_Size__c * 10.7639, &quot;FV&quot;, Effective_Size__c,Effective_Size__c * 12)</formula>
    <label>Effective Size for Charges</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>