force-app/main/default/objects/Opportunity/fields/EU_Brand_Captain__c.field-meta.xml
<CustomField>
    <fullName>EU_Brand_Captain__c</fullName>
    <description>This is the EU Brand Captain on the Brand Account</description>
    <formula>Account.EU_Brand_Captain__r.FirstName +&apos; &apos;+ Account.EU_Brand_Captain__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>This is the EU Brand Captain on the Brand Account</inlineHelpText>
    <label>EU Brand Captain</label>
    <type>Text</type>
</CustomField>