force-app/main/default/objects/Opportunity/fields/Exit_Date__c.field-meta.xml
<CustomField>
    <fullName>Exit_Date__c</fullName>
    <inlineHelpText>Enter the date that the brand is expected to exit if budgetted or not</inlineHelpText>
    <label>Actual Exit Date</label>
    <type>Date</type>
</CustomField>