force-app/main/default/objects/Opportunity/fields/Expected_Exit_Date__c.field-meta.xml
<CustomField>
    <fullName>Expected_Exit_Date__c</fullName>
    <description>The date the brand is expected to exit the village.</description>
    <inlineHelpText>The date the brand is expected to exit the village.</inlineHelpText>
    <label>Expected Exit Date</label>
    <type>Date</type>
</CustomField>