force-app/main/default/objects/Opportunity/fields/Expected_Open_Date__c.field-meta.xml
<CustomField>
    <fullName>Expected_Open_Date__c</fullName>
    <inlineHelpText>The date that the brand is expected to open its doors and begin trading</inlineHelpText>
    <label>Expected Open Date</label>
    <type>Date</type>
</CustomField>