force-app/main/default/objects/Opportunity/fields/Expected_Open_Exit_Date__c.field-meta.xml
<CustomField>
    <fullName>Expected_Open_Exit_Date__c</fullName>
    <inlineHelpText>Enter the date that the brand is expected to open or exit</inlineHelpText>
    <label>Expected Open/Exit Date</label>
    <type>Date</type>
</CustomField>