force-app/main/default/objects/Opportunity/fields/Expected_Signature_Date__c.field-meta.xml
<CustomField>
    <fullName>Expected_Signature_Date__c</fullName>
    <inlineHelpText>The date that the official lease agreement is expected to be signed</inlineHelpText>
    <label>Expected Signature Date</label>
    <type>Date</type>
</CustomField>