force-app/main/default/objects/Opportunity/fields/Fiscal_Quarter__c.field-meta.xml
<CustomField>
    <fullName>Fiscal_Quarter__c</fullName>
    <formula>TEXT(YEAR( CloseDate )) &amp; &quot; Q&quot; &amp; TEXT(FLOOR(((MONTH(CloseDate)-1)/3)+1))</formula>
    <label>Fiscal Quarter</label>
    <type>Text</type>
</CustomField>