force-app/main/default/objects/Opportunity/fields/From__c.field-meta.xml
<CustomField>
    <fullName>From__c</fullName>
    <formula>IF( YEAR( Open_Date__c ) = Current_Year__c , Open_Date__c , DATE(Current_Year__c,01,01) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The first day of potential trading for this brand in the current year</inlineHelpText>
    <label>From</label>
    <type>Date</type>
</CustomField>