force-app/main/default/objects/Opportunity/fields/FX_Rate__c.field-meta.xml
<CustomField>
    <fullName>FX_Rate__c</fullName>
    <formula>Village__r.FX_Rate_to_Group_CCY__c</formula>
    <inlineHelpText>The exchange rate from the local currency to the Euro (if applicable).</inlineHelpText>
    <label>FX Rate</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>