force-app/main/default/objects/Opportunity/fields/GEA_Sq_ft__c.field-meta.xml
<CustomField>
    <fullName>GEA_Sq_ft__c</fullName>
    <formula>Unit__r.Size_sq_ft__c</formula>
    <inlineHelpText>Gross External Area (in square feet) pulled from the Unit</inlineHelpText>
    <label>GEA Sq.ft</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>