force-app/main/default/objects/Opportunity/fields/GEA_Sq_m__c.field-meta.xml
<CustomField>
    <fullName>GEA_Sq_m__c</fullName>
    <formula>Unit__r.Size_GEA__c</formula>
    <inlineHelpText>Gross External Area (in square metres) pulled from the Unit</inlineHelpText>
    <label>GEA Sq.m</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>