force-app/main/default/objects/Opportunity/fields/GIA_Sq_ft__c.field-meta.xml
<CustomField>
    <fullName>GIA_Sq_ft__c</fullName>
    <formula>Unit__r.GIA_sq_ft__c</formula>
    <inlineHelpText>Gross Internal Area (in square feet) pulled from the Unit</inlineHelpText>
    <label>GIA Sq.ft</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>