force-app/main/default/objects/Opportunity/fields/GIA_Sq_m__c.field-meta.xml
<CustomField>
    <fullName>GIA_Sq_m__c</fullName>
    <formula>Unit__r.Size_GIA__c</formula>
    <inlineHelpText>Gross Internal Area (in square metres) pulled from the Unit</inlineHelpText>
    <label>GIA Sq.m</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>