force-app/main/default/objects/Opportunity/fields/Gift_Description__c.field-meta.xml
<CustomField>
    <fullName>Gift_Description__c</fullName>
    <inlineHelpText>Describe the gift(s)</inlineHelpText>
    <label>Gift Description</label>
    <type>TextArea</type>
</CustomField>