force-app/main/default/objects/Opportunity/fields/Gift_Recipients__c.field-meta.xml
<CustomField>
    <fullName>Gift_Recipients__c</fullName>
    <inlineHelpText>Enter the name(s) of those who will receive the gift(s)</inlineHelpText>
    <label>Gift Recipients</label>
    <length>125</length>
    <type>Text</type>
</CustomField>