force-app/main/default/objects/Opportunity/fields/Gift_Status__c.field-meta.xml
<CustomField>
    <fullName>Gift_Status__c</fullName>
    <inlineHelpText>Was a gift given upon completion of this deal? Must be completed before the deal can be closed.</inlineHelpText>
    <label>Gift Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>No Gift Given</fullName>
            </value>
            <value>
                <fullName>Gift Recorded</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>