force-app/main/default/objects/Opportunity/fields/Gift_Value__c.field-meta.xml
<CustomField>
    <fullName>Gift_Value__c</fullName>
    <inlineHelpText>Enter the value of the gift(s)</inlineHelpText>
    <label>Gift Value</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>