force-app/main/default/objects/Opportunity/fields/Gifts_Recorded__c.field-meta.xml
<CustomField>
    <fullName>Gifts_Recorded__c</fullName>
    <description>number of gifts recorded (used for validation)</description>
    <label>Gifts Recorded</label>
    <summaryForeignKey>Gift__c.Deal__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>