force-app/main/default/objects/Opportunity/fields/Group_Context__c.field-meta.xml
<CustomField>
    <fullName>Group_Context__c</fullName>
    <label>Group Context</label>
    <type>TextArea</type>
</CustomField>