force-app/main/default/objects/Opportunity/fields/Group_Currency__c.field-meta.xml
<CustomField>
    <fullName>Group_Currency__c</fullName>
    <formula>TEXT( Village__r.Group_Currency__c  )</formula>
    <inlineHelpText>The group currency pulled from the Village</inlineHelpText>
    <label>Group Currency</label>
    <type>Text</type>
</CustomField>