force-app/main/default/objects/Opportunity/fields/GRS_Captain__c.field-meta.xml
<CustomField>
    <fullName>GRS_Captain__c</fullName>
    <inlineHelpText>The name of the GRS captain updated from the Deal Team</inlineHelpText>
    <label>GRS Captain</label>
    <length>25</length>
    <type>Text</type>
</CustomField>