force-app/main/default/objects/Opportunity/fields/Ideal_Size__c.field-meta.xml
<CustomField>
    <fullName>Ideal_Size__c</fullName>
    <inlineHelpText>If a specific unit is not nominated then use this field to specify the ideal size this brand will be using in the size metric specific to the village</inlineHelpText>
    <label>Ideal Size</label>
    <precision>9</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>