force-app/main/default/objects/Opportunity/fields/In_Budget__c.field-meta.xml
<CustomField>
    <fullName>In_Budget__c</fullName>
    <inlineHelpText>Indicate whether this remerchandise activity is in next year&apos;s budget or not and if it is still likely to happen</inlineHelpText>
    <label>Budget Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Budgeted LY</fullName>
            </value>
            <value>
                <fullName>Budgeted TY</fullName>
            </value>
            <value>
                <fullName>Budgeted TY Wont Happen</fullName>
            </value>
            <value>
                <fullName>Budgeted TY Delayed</fullName>
            </value>
            <value>
                <fullName>Budgeted TY Unit Change</fullName>
            </value>
            <value>
                <fullName>Budgeted NY</fullName>
            </value>
            <value>
                <fullName>Not Budgeted</fullName>
            </value>
            <value>
                <fullName>Budgeted</fullName>
            </value>
            <value>
                <fullName>Reforecast</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>