force-app/main/default/objects/Opportunity/fields/Income_Rating__c.field-meta.xml
<CustomField>
    <fullName>Income_Rating__c</fullName>
    <defaultValue>0</defaultValue>
    <inlineHelpText>This is normally calculated based on the ratings attached to the village if the Income yield is known otherwise enter the rating to be applied to this brand in this village</inlineHelpText>
    <label>Income Rating</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>