force-app/main/default/objects/Opportunity/fields/International_Presence__c.field-meta.xml
<CustomField>
    <fullName>International_Presence__c</fullName>
    <inlineHelpText>Enter the international presence and strategy (max 1024)</inlineHelpText>
    <label>International Presence</label>
    <length>1024</length>
    <type>LongTextArea</type>
</CustomField>