force-app/main/default/objects/Opportunity/fields/Key_Handback_Date__c.field-meta.xml
<CustomField>
    <fullName>Key_Handback_Date__c</fullName>
    <label>Key Handback Date</label>
    <type>Date</type>
</CustomField>