force-app/main/default/objects/Opportunity/fields/Last_StageChange_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_StageChange_Date__c</fullName>
    <label>Last StageChange Date</label>
    <type>Date</type>
</CustomField>