force-app/main/default/objects/Opportunity/fields/Last_Trading_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Trading_Date__c</fullName>
    <inlineHelpText>The date on which the brand closes its doors to the guests</inlineHelpText>
    <label>Expected Last Trading Date</label>
    <type>Date</type>
</CustomField>