force-app/main/default/objects/Opportunity/fields/Lead_Negotiator_Brand__c.field-meta.xml
<CustomField>
    <fullName>Lead_Negotiator_Brand__c</fullName>
    <label>Lead Negotiator Brand</label>
    <length>50</length>
    <type>Text</type>
</CustomField>