force-app/main/default/objects/Opportunity/fields/Lead_Negotiator_for_Brand__c.field-meta.xml
<CustomField>
    <fullName>Lead_Negotiator_for_Brand__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Lead Negotiator for Brand</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Contact.RecordType.DeveloperName</field>
            <operation>equals</operation>
            <value>Brand Contact</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Opportunities</relationshipLabel>
    <relationshipName>Negotiator_on_Deal</relationshipName>
    <type>Lookup</type>
</CustomField>