force-app/main/default/objects/Opportunity/fields/Lead_Negotiator_for_VR__c.field-meta.xml
<CustomField>
    <fullName>Lead_Negotiator_for_VR__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Lead Negotiator for VR</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Negotiator_for_Deals</relationshipName>
    <type>Lookup</type>
</CustomField>