force-app/main/default/objects/Opportunity/fields/Lead_Negotiator_VR__c.field-meta.xml
<CustomField>
    <fullName>Lead_Negotiator_VR__c</fullName>
    <label>Lead Negotiator VR</label>
    <length>25</length>
    <type>Text</type>
</CustomField>